# mushroom_datascience

./: .gitignore  .~lock.Roadmap champignons.xlsx#  README.md  Roadmap champignons.xlsx  Roadmap.xlsx  pyproject.toml  requirements.txt  start_streamlit.sh
old/: 4_etude_cnn.ipynb
old/docs/: Arbo Git.xmind  Pipeline.xmind
old/notebooks/: 1_creation_datasets.ipynb  2_analyses.ipynb  3_CNN.ipynb  4_etude_cnn.ipynb  5_optuna.ipynb  fonctions_data.py  fonctions_dataset.py  optuna_fonctions.py
src/: sort_images.py
src/notebooks/: 1-data_clean.ipynb  1-dataset_clean.ipynb  2-data_analysis.ipynb  3-classification_choice.ipynb  3-imgs_analysis.ipynb  4-classification_choice.ipynb  4-file_sort.ipynb  5-data_preprocessing.ipynb  5-imgs_analysis.ipynb  6-data_preprocessing.ipynb  7-modelization.ipynb  8-model_train.ipynb  9-model_evaluate.ipynb
src/scripts/: file_list.py  sort_images.py
src/streamlit/: (deprecated)classificationchoicepage.py  classificationchoicepage.py  dataanalysis_page.py  dataanalysispage.py  datasetcsv_page.py  datasetcsvpage.py  datavisualisationpage.py  evaluation_page.py  evaluationpage.py  home_page.py  imagevizpage.py  main.py  modelization_page.py  modelizationpage.py  originaldatasetpage.py  pages img.py  streamlit.env  streamlit_vars.py
src/utils/: check_existing_file.py  file_list.py  file_processing.py  generate_model.py  img_preprocessing.py  import_df.py  model_generation.py  sort_images.py
storage/datas/encoded_targets/: encoded_targets_top_10_species.txt  encoded_targets_top_10_species_sample.txt
(+5 files in other folders)
