[tool.poetry]
name = "mushroom-datascience"
version = "0.1.0"
description = ""
authors = ["Guillaume pot <guillaume.pot@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
