[tool.poetry]
name = "mushroom-datascience"
version = "0.1.0"
description = ""
authors = ["Guillaume pot <guillaume.pot@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
seaborn = "^0.13.2"
ipykernel = "^6.29.3"
opencv-python = "^4.9.0.80"
streamlit = "^1.32.2"
bokeh = "^3.4.0"
scikit-learn = "^1.4.1.post1"
tensorflow = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
